--- a/cq.html
+++ b/cq.html
@@ -20,6 +20,19 @@
           <li><a href="mixed.html">mixed doubles</a></li>
         </ul>
     </nav>
+
+    <div style="display: grid; place-items: center; margin-top: 5vh;">
+        <!-- <div class="title">
+            <h1 class="satisfy-regular-title">Sun is the only hope.</h1>
+            <hr style="width: 70%; margin-top: 3vh;">
+            <h2 class="satisfy-regular-name">SUN Yingsha · WANG Chuqin</h2>
+            <hr style="width: 70%; ">
+            
+        </div> -->
+        <!-- <h2 class="satisfy-regular-name" style="margin-bottom: 2vh;">許一個左手奇蹟 續一個右手傳奇</h2> -->
+        <img src="image/IMG_E3071.JPG" style="width: 80%;">
+
+    </div>
 </body>
 </html>
 
