--- a/home.html
+++ b/home.html
@@ -37,7 +37,6 @@
         <h2 class="satisfy-regular-name" style="margin-bottom: 2vh;">走過得每一步 都算數</h2>
         <img src="image/472827547_122200888964200273_8913682173381337546_n.jpg" style="width: 70%;">
 
-        
     </div>
 
     <div class="game_history">
@@ -46,11 +45,11 @@
             <div class="card">
                 <h3>巴黎奧運-混雙金牌</h3>
                 <p>2024·7·30</p>
-                <img src="image/IMG_3016.JPG">
+                <img src="image/paris1.JPG">
             </div>
             <div class="card">
                 <h3>青奧-混團金牌</h3>
-                <p>2024·10·10</p>
+                <p>2018·10·10</p>
                 <img src="image/2018.jpg">
             </div>
             <div class="card">
@@ -73,7 +72,7 @@
     </div>
 
 
-    <div class="about">
+    <div class="about" id="about">
         <h3>About</h3>
         <!-- <div> -->            
 
