--- a/ss.html
+++ b/ss.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>孫穎莎</title>
     <link rel="icon" href="image/ss_icon.png" type="image/x-icon"/>
     
 </head>
